# manage-breast-screening-flask-spike

./: .gitignore  .tool-versions  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml
manage/: __init__.py  app.py  clinics.py  db.py  jinja_filters.py  models.py
manage/migrations/: env.py
manage/migrations/versions/: 4b5323a13502_drop_location_field_on_clinics_table.py  51cf1afa754f_add_example_clinics.py  60a0cfee744e_create_initial_tables.py
manage/scripts/: init_db.py
manage/templates/: clinics.html  layout-app.html
